<resources>
    <string name="app_name">DnDer</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_search_username">Input Search Username</string>
    <string name="search">Search</string>
    <string name="input_search_username2">Input Search Username</string>
    <string name="age">Age</string>
    <string name="bio">Biography</string>
    <string name="loremipsum">LoremIpsum</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="current_username">Current Username</string>
    <string name="new_username">New Username</string>
    <string name="user1">UnDeterminedFate</string>
    <string name="age1">18</string>
    <string name="bio1">Lorem Ipsum</string>
    <string name="user2">ChimichangaChew</string>
    <string name="age2">22</string>
    <string name="user3">Squishy</string>
    <string name="age3">13</string>
    <string name="user4">UnWoundCourage</string>
    <string name="age4">37</string>
    <string name="user5">Resident_Kouhai</string>
    <string name="age5">69</string>
    <string name="user6">AlexChoo</string>
    <string name="age6">30</string>
    <string name="user7">ChinCheddarPeppers</string>
    <string name="age7">28</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="theme_header">Theme</string>
    <string name="pref_title_theme">Dark mode</string>
    <string name="pref_description_theme">This option turns dark mode on or off</string>
    <string name="notif_body">This option turns notifications for this app on or off</string>
    <string name="notif_test">Tap to test notifications</string>
    <string name="channel_name">DnDer</string>
    <string name="channel_description">Obnoxious Alerting for Points</string>
    <string name="create_profile">Create Profile</string>
    <string name="helpbody">DnDer will be a DnD party finding utility in it\'s finished state.\n\nCurrent features include dark mode and notification options that are adjustable in settings. Users can search for and create profiles to store in a local database.\n\nProfiles can be created in settings.</string>
    <string name="helptitle">Help</string>
</resources>

